добавил z-index  в главный файл и поправил всплывающие таблички

--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -750,6 +750,7 @@ li.cards-counter {
     padding-left: 10px;
     color: white;
     font-weight: 600;
+    white-space: pre;
 }
 
 .city::before {
