--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -111,7 +111,7 @@ h2.region-caption,
 .gid-list a {
     float: left;
     padding-top: 15px;
-    margin-left: 15%;
+    margin-left: 16%;
     font-size: 18px;
     color: black;
 }
@@ -158,7 +158,8 @@ h2.region-caption,
 }
 
 #gid-item-9 {
-    background-image: url(https://nadv.ru/_v2/images/fountan.png)
+    background-image: url(https://nadv.ru/_v2/images/fountan.png);
+    background-position: 25px 20px, 0px 0px, 0px 0px;
 }
 
 #gid-item-10 {
