--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -767,7 +767,8 @@ li.cards-counter {
 }
 
 .tourism-section {
-    margin-bottom: 2em;
+
+    overflow: hidden;
 }
 
 
@@ -1067,4 +1068,12 @@ li.cards-counter {
 .carousel-inner>.item {
   height: 100%;
   min-height: 560px;
+}
+
+.contour-map-wrapp {
+    margin-bottom: 1em
+}
+
+.region-type-wrapp {
+   
 }
