Поправил стрелки на слайдере и убрал лишние элементы из макета

--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -1164,4 +1164,9 @@ li.cards-counter {
     background-size: cover;
     padding: 0 0 3rem 0;
     margin-left: 0;
+    border-right: 3px solid #cce8ff;
+}
+
+.region-slider-control {
+  top: 45% !important;  
 }
