--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -33,6 +33,11 @@ section#tur-service {
     text-transform: uppercase;
 }
 
+.tour-calendar-wrapp {
+    display: flex;
+    flex-direction: column;
+}
+
 span.glyphicon.glyphicon-arrow-left,
 span.glyphicon.glyphicon-arrow-right {
     top: 40%;
@@ -329,8 +334,9 @@ li#compare-1 {
     width: 100%;
     min-width: 275px;
     height: 100%;
-    min-height: 315px;
+    min-height: 360px;
     padding: 0 0 3rem 0;
+    position: relative;
     /*  The gap must be in the element definition */
 }
 
@@ -406,13 +412,14 @@ a.right.slider-control {
     width: 13%;
     position: absolute;
     background-color: #0d75c7;
-    left: 90%;
+    left: 93%;
     bottom: 50%;
     color: #fff;
     z-index: 1111;
     font-weight: bold;
     float: left;
     text-align: center;
+    max-width: 70px;
 }
 
 #cal-num {
@@ -1602,13 +1609,6 @@ li.typeof-rest-item {
         max-width: 100%;
         max-height: 100%;
     }    
-}
-
-.region-caption {
-    font-size: 36px;
-    padding-left: 0%;
-    font-weight: 600;
-    margin-bottom: 20px;
 }
 
 .col-md-12.col-sm-12.region-type-wrapp {
