--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -36,6 +36,7 @@ section#tur-service {
 .tour-calendar-wrapp {
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
 }
 
 span.glyphicon.glyphicon-arrow-left,
@@ -411,11 +412,11 @@ a.right.slider-control {
 .cal-caption {
     width: 13%;
     position: absolute;
-    background-color: #0d75c7;
+    background-color: rgba(13, 117, 199, 0.7);
     left: 93%;
     bottom: 50%;
     color: #fff;
-    z-index: 1111;
+    z-index: 11;
     font-weight: bold;
     float: left;
     text-align: center;
@@ -1080,7 +1081,7 @@ a.right.carousel-control, a.left.carousel-control {
 }
 
 #ivent-place {
-  padding-left: 8%;
+  padding-left: 8% !important;
 }
 
 p#ivent-about {
@@ -1306,6 +1307,7 @@ ul.typeof-rest-list.col-md-8,
     margin-right: 45px;
     margin-left: -45px;
     position: relative;
+    float: left;
 }
 
 .col-md-5.col-sm-5.attraction-rest::before {
@@ -1654,4 +1656,102 @@ li.typeof-rest-item {
 }
 */
 
+.tour-calendar-ivent-place {
+    font-size: 18px;
+    color: #0d75c7;
+    padding-left: 3% !important;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+
+.tour-calendar-ivent-capt {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    line-height: 30px;
+    margin-top: 0;
+    padding-top: 20px;
+    font-weight: 600;
+}
+
+.tour-calendar-image {
+    min-height: 430px !important;
+}
+
+.tour-calendar-ivent-wrapp {
+    min-height: 220px !important;
+}
+
+.tour-calendar-image, .tour-calendar-ivent-wrapp {
+    max-width: 830px;
+}
+
+.tour-calendar-caption {
+    bottom: 70% !important;
+}
+
+.tour-calendar-ivent-about {
+    margin-bottom: 20px;
+}
+
+.tour-calendar-ivent-type {
+    position: absolute;
+    font-size: 16px;
+    bottom: 0;
+    right: 0;
+    padding: 10px 20px 10px 20px;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: rgba(147, 173, 97, 0.7);
+}
+
+.tour-calendar-container > * {
+    max-width: 400px;
+    min-height: 530px !important;
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
+.tour-calendar-container > *:nth-child(even) {
+    margin-left: 30px;
+}
+
+.tour-calendar-container > *:nth-child(odd) {
+    margin-left: 0;
+}
+
+
+.tour-calendar-container > .col-md-6.col-sm-5 img {
+    width: 100%;
+}
+
+.scroll-header a {
+    all: unset;
+}
+
+.tour-calendar-container > * a:hover {
+    text-decoration: none;
+}
+
+h3.tour-calendar-scroll-header {
+    padding-right: 30px;
+    font-size: 20px;
+    padding-top: 20px;
+    line-height: 20px;
+    margin: 0
+}
+
+
+.tour-calendar-container > .col-md-6.col-sm-5 p {
+    font-size: 16px;
+    line-height: 20px;
+    padding-left: 20px;
+}
+
+.tour-calendar-container > *:hover {
+    cursor: pointer;
+    background-color: #e3f6ff;
+}
 
