поправил отображение "о событии" хотфикс

--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -462,6 +462,7 @@ mobile-slider-control:hover {
 p#ivent-about {
     font-size: 16px;
     float: left;
+    padding-left: 0;
 }
 
 #ivent-place {
