--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -37,6 +37,8 @@ section#tur-service {
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    max-width: 840px;
+    padding-right: 0 !important;
 }
 
 span.glyphicon.glyphicon-arrow-left,
@@ -1662,8 +1664,8 @@ li.typeof-rest-item {
     color: #0d75c7;
     padding-left: 3% !important;
     font-weight: 600;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-top: 15px;
+    margin-bottom: 35px;
 }
 
 
@@ -1705,7 +1707,7 @@ li.typeof-rest-item {
     color: #fff;
     font-weight: 600;
     text-transform: uppercase;
-    background-color: rgba(147, 173, 97, 0.7);
+    background-color: rgba(147, 173, 97, 0.8);
 }
 
 .tour-calendar-container > * {
@@ -1716,7 +1718,7 @@ li.typeof-rest-item {
 }
 
 .tour-calendar-container > *:nth-child(even) {
-    margin-left: 30px;
+    margin-left: 25px;
 }
 
 .tour-calendar-container > *:nth-child(odd) {
@@ -1753,6 +1755,7 @@ h3.tour-calendar-scroll-header {
     background: none;
     position: relative !important;
     margin-bottom: 0;
+    padding-right: 15px;
 }
 
 .tour-calendar-container > *:hover {
@@ -1770,7 +1773,101 @@ h3.tour-calendar-scroll-header {
 }
 
 .tour-card-caption {
-    bottom: 60%;
+    bottom: 58%;
     left: 85%;
     width: 18%;
+}
+
+.tourism-calendar-wrapper {
+    float: right !important;
+    padding-left: 20px !important;
+    border-left: 1px solid #e5e5e5;
+    margin-right: 12em;
+}
+
+.cal-wrapp {
+    padding: 0 !important;
+}
+
+.tur-cal-select {
+    width: 100%;
+    max-width: 310px;
+    margin-bottom: 30px;
+    background-image: url(https://nadv.ru/_v2/images/little-arrow_03.png);
+    background-repeat: no-repeat;
+    background-position: 96% 15px;
+    -webkit-appearance: inherit;
+    height: 100%;
+    min-height: 40px;
+    padding-left: 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.container.tourism-section-container {
+    width: 100%;
+    max-width: 1440px;
+    margin-left: calc(25% - 120px);
+}
+
+button.calendar-day-butt {
+    width: 100%;
+    max-width: 150px;
+    height: 100%;
+    font-size: 12px;
+    min-height: 35px;
+    background: none;
+    border: 1px solid #1b8bc2;
+    border-radius: 3px;
+    color: #1b8bc2;
+    margin-right: 6px;
+}
+
+#sandbox-range {
+    padding-bottom: 35px;
+}
+
+button#picking {
+    text-transform: uppercase;
+    background: none;
+    border: none;
+    width: 100%;
+    max-width: 135px;
+    height: 100%;
+    min-height: 50px;
+    background-color: #1b8bc2;
+    font-weight: 600;
+    color: #fff;
+    font-size: 16px;
+}
+
+h4.calendar-h4-header {
+    margin: 0;
+    padding-bottom: 10px;
+    padding-top: 0;
+}
+
+div#sandbox-container {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-right: 5px;
+    border: 1px solid #e5e5e5;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+th.datepicker-switch, th.prev, th.next {
+    color: #0493d0;
+}
+
+@media (max-width: 1366px) {
+  .container.tourism-section-container {
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+}
+
+.tourism-calendar-wrapper {
+    margin-right: 4em;
+}  
 }
