--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -71,7 +71,7 @@ a.left.carousel-control {
 
 .carousel-arrow {
     position: relative;
-    top: 1.9em;
+    top: 1.8em;
 }
 
 @media screen and (max-width: 480px) {
@@ -1114,6 +1114,9 @@ li.cards-counter {
   padding-left: 15%;
   padding-right: 6%;
 }
+    .mobile-slide-control {
+        display: block;
+    }
 }
 
 .carousel-inner>.item {
@@ -1896,3 +1899,62 @@ span.input-group-addon {
 }
 
 
+.social-list-container .list-container > * {
+    color: #fff;
+    background: none;
+    margin-right: -0.5rem;
+    width: 100%;
+    min-width: 275px;
+    height: 100%;
+    min-height: 310px;
+    padding: 0 0 3rem 0;
+    position: relative;
+}
+
+.social-cont-item {
+    font-size: 16px;
+    background: none;
+    font-weight: 600;
+    padding: 0;
+    line-height: normal;
+    position: relative;
+    margin-top: 15px;
+}
+
+.social-container-link {
+    color: #39a5e8;
+    border: none;
+    height: 30px;
+}
+
+.social-list-container .list-container > * a > img {
+    margin-bottom: 10px;
+}
+
+.social-cont-ico {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+}
+
+.social-vk {
+    background-image: url(https://nadv.ru/_v2/images/vk-ico_09.png)
+}
+
+.social-inst {
+    background-image: url(https://nadv.ru/_v2/images/inst-ico_03.png)
+}
+
+.social-twitt {
+    background-image: url(https://nadv.ru/_v2/images/twitt-ico_07.png)
+}
+
+.social-facebook {
+    background-image: url(https://nadv.ru/_v2/images/facebook-ico_05.png);
+}
+
+.mobile-slide-control { 
+  display: none;
+}
