--- a/tourism/_v2/css/tourism.css
+++ b/tourism/_v2/css/tourism.css
@@ -125,14 +125,20 @@ h2.region-caption,
     margin-left: 16%;
     font-size: 18px;
     color: black;
+    border: none;
+    text-decoration: underline dotted #9d9d9d;
 }
 
 .gid-list li:hover {
-    background-color: #ebf6ff;
+    cursor: pointer;  
+    background-color: #ebf6ff; 
 }
 
-.gid-list a:hover {
-    color: #73aee0;
+.gid-list li:hover a {
+    color: #0393d0 !important;
+    cursor: pointer;
+    font-weight: 600;
+    text-decoration: none;
 }
 
 #gid-item-1 {
@@ -233,8 +239,9 @@ ul.compare-color {
     height: 10px;
     float: right;
     position: relative;
-    left: -9%;
+    left: -8%;
     margin-top: -15px;
+    padding-right: 15px;
 }
 
 
@@ -556,32 +563,31 @@ a.right.small-slider-control {
     font-size: 18px;
     position: absolute;
     top: 10%;
-    padding: 0;
-    margin: 0;
+    margin: -18px auto;
     width: 95%;
-    height: 110%;
+    height: 111%;
     background-color: rgba(0, 0, 0, 0.45);
     float: left;
     text-align: left;
-    padding-top: 4em;
-    padding-right: 3em;
-    padding-left: 1em;
     font-weight: 600;
+    padding: 4em 3em 0 1em;
     margin-top: -18px;
+    cursor: pointer;
 }
 
 .region-caption {
     font-size: 36px;
-    padding-left: 1%;
     font-weight: 600;
     margin-bottom: 20px;
+    margin-top: 40px;
+    padding-left: 25px;
 }
 
 .cal-small-caption {
     width: 24%;
     top: 20%;
     bottom: 47%;
-    left: 84%;
+    left: 80%;
     height: 55%;
     z-index: 0;
 }
@@ -618,6 +624,7 @@ a.right.small-slider-control {
     top: 65%;
     color: white;
     font-size: 24px;
+    left: 0;
 }
 
 .card-big-footer ul {
@@ -648,7 +655,7 @@ li.cards-counter {
 .useful-middle-card_capt p,
 .useful-small-card_capt p {
     position: relative;
-    left: 0.5em;
+    left: 25px;
 }
 
 .useful-big-card_capt p,
@@ -1957,4 +1964,12 @@ span.input-group-addon {
 
 .mobile-slide-control { 
   display: none;
+}
+
+.tourism-section .container > h2.region-caption {
+    padding-left: 0;
+}
+
+.container.main-cards-container > h2.region-caption {
+    padding-left: 25px;
 }
